fixed container overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,22 +57,25 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  margin: 0 auto;
   height: 100%;
 }
 
 #form-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 30px;
-  margin: auto;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-rows: 30% 30% 30%;
+  grid-gap: 5%;
+  margin: 0 auto;
   padding: 10px;
-  height: auto;
-  width: auto;
+  height: 90%;
+  width: 60%;
+ 
+
 }
 
 .search-engine {
+  border: 3px solid red;
   color: rgb(15, 61, 65);
   border-top-left-radius: 50px;
   border-bottom-right-radius: 50px;
@@ -80,7 +83,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 25px 20px;
   border: 2px solid #06363b;
   background-color: #58a9b3; 
   transition: background-color 300ms ease-in, border-top-right-radius 1s, border-bottom-left-radius 1s, border-top-left-radius 1s, border-bottom-right-radius 1s, letter-spacing 1s, color 1s linear;
@@ -98,11 +101,11 @@ button {
   justify-content: center;
   align-items: center;
   margin-top: 15px;
-  width: 200px;
+  width: 90%;
 }
 
 button {
-  width: 25%;
+  width: 50%;
   margin-top: 5px;
   border-top-left-radius: 12px;
   border-bottom-right-radius: 12px;
